# Compiler

./: .clang-format  CMakeLists.txt  LICENSE  README.md  assemble.sh  grammar.bnf  grammar.md  out.asm  premake5.lua  src.gl  src.glassy  test.asm  test.glassy
src/: AST.h  Arena.h  Generator.cpp  Generator.h  Lexer.cpp  Lexer.h  Main.cpp  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h  Utils.h  ast.h  generator.cpp  generator.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  pch.h  symbol_table.cpp  symbol_table.h  utils.cpp  utils.h
test/: Main.asm  Main.c  Print.asm  assemble.sh  fibonacci.c  main.asm  main.c  power.c  print.asm
